2009-08-31  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Compositing layer size needs to take into account software reflections on children.
        https://bugs.webkit.org/show_bug.cgi?id=28837

        When computing the bounds of a composited layer, take software-rendered
        reflections into account.

        Test: compositing/reflections/reflection-in-composited.html

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::calculateCompositedBounds):

Canonical link: https://commits.webkit.org/39481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47905 268f45cc-cd09-0410-ab3c-d52691b4dbfc